...
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:orientation="vertical">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/id_button_favourite"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="right"
                    android:layout_weight="0.75"
                    android:clickable="true"
                    android:translationY="10dp"
...
                    android:layout_weight="0.25"
                    android:background="@drawable/textview_border"
                    android:orientation="vertical"
                    android:paddingHorizontal="10dp">

                    <TextView
                        android:id="@+id/id_full_name_title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="TextView"
                        android:textSize="22dp" />

...
